# single_op_demo

./: .gitignore  readme.md
1_custom_op/: CMakeLists.txt  README.md  build.sh
1_custom_op/build_out/: CMakeCache.txt  Makefile  cmake_install.cmake  custom_opp_ubuntu_aarch64.run
1_custom_op/build_out/cpukernel/: Makefile  cmake_install.cmake
1_custom_op/build_out/framework/: Makefile  cmake_install.cmake
1_custom_op/build_out/framework/caffe_plugin/: Makefile  cmake_install.cmake
1_custom_op/build_out/framework/onnx_plugin/: Makefile  cmake_install.cmake
1_custom_op/build_out/framework/op_info_cfg/ai_core/: npu_supported_ops.json
1_custom_op/build_out/framework/tf_plugin/: Makefile  cmake_install.cmake
1_custom_op/build_out/framework/tf_scope_fusion_pass/: Makefile  cmake_install.cmake
1_custom_op/build_out/makepkg/: install.sh  upgrade.sh  version.info
1_custom_op/build_out/op_proto/: Makefile  cmake_install.cmake
1_custom_op/build_out/tbe/: Makefile  cmake_install.cmake
1_custom_op/cpukernel/impl/: unique_cust_kernels.cc
1_custom_op/doc/: BatchMultiClassNonMaxSuppression_CN.md  BatchMultiClassNonMaxSuppression_EN.md  Unique_CN.md  Unique_EN.md
1_custom_op/framework/tf_plugin/: CMakeLists.txt
1_custom_op/op_proto/: conv2d_tik.h  softmax_tik.h  unique_cust.cc
1_custom_op/scripts/: ide_customops_install.sh
1_custom_op/tbe/impl/: softmax_tik.py
2_verify_op/acl_execute_addblockcust/: README.md  README_CN.md
2_verify_op/acl_execute_batchnorm/: README.md
4_other/singleop/tbe/impl/: README.md
5_custom_op_dev/op_proto/: softmax_tik.h
5_custom_op_dev/tbe/impl/: softmax_tik.py
6_ascendc_custom_op/acl_invocation/: readme.md
6_ascendc_custom_op/acl_invocation/acl_offline_model/: run.sh
6_ascendc_custom_op/acl_invocation/acl_online_model/: run.sh
6_ascendc_custom_op/acl_invocation/acl_online_model_unalign/: run.sh
6_ascendc_custom_op/acl_invocation/op_dev/: add_custom.json  add_custom_unalign.json
6_ascendc_custom_op/acl_invocation/op_dev/op_host/: add_custom.cpp  add_custom_tiling.h  add_custom_unalign.cpp  add_custom_unalign_tiling.h
6_ascendc_custom_op/acl_invocation/op_dev/op_kernel/: add_custom.cpp  add_custom_unalign.cpp
6_ascendc_custom_op/kernel_invocation/: readme.md
6_ascendc_custom_op/kernel_invocation/Add/: add_custom.cpp  cmake  main.cpp  run.sh
6_ascendc_custom_op/kernel_invocation/Add_tile/: CMakeLists.txt  add_custom.cpp  add_custom.py  add_custom_tiling.h  data_utils.h  main.cpp
6_ascendc_custom_op/kernel_invocation/LeakyReLU/: CMakeLists.txt  leakyrelu_custom.cpp  leakyrelu_custom.py  leakyrelu_custom_tiling.h  main.cpp  readme.md  run.sh
6_ascendc_custom_op/kernel_invocation/MatMul/: CMakeLists.txt  main.cpp  matmul_custom.cpp  matmul_custom.py  readme.md  run.sh
6_ascendc_custom_op/kernel_invocation/MatMul/cmake/Modules/: CMakeDetermineCCECompiler.cmake
6_ascendc_custom_op/kernel_invocation/MatMul/cmake/cpu/: CMakeLists.txt
6_ascendc_custom_op/kernel_invocation/MatMul/cmake/tiling/: CMakeLists.txt
6_ascendc_custom_op/kernel_invocation/MatMul/custom_tiling/: main.cpp
6_ascendc_custom_op/kernel_invocation/kernel_template/: run.sh
6_ascendc_custom_op/kernel_invocation/kernel_template/cmake/npu/: CMakeLists.txt
6_ascendc_custom_op/onnx_inference/LeakyReluCustom/: leaky_relu_custom.json
6_ascendc_custom_op/onnx_inference/LeakyReluCustom/framework/onnx_plugin/: CMakeLists.txt  onnx_leaky_relu_custom_plugin.cc
6_ascendc_custom_op/onnx_inference/LeakyReluCustom/op_host/: CMakeLists.txt  leaky_relu_custom.cpp  leaky_relu_custom_tiling.h
6_ascendc_custom_op/onnx_inference/LeakyReluCustom/op_kernel/: CMakeLists.txt  leaky_relu_custom.cpp
6_ascendc_custom_op/pytorch_invocation/: .gitignore  op_dev  readme.md  run.sh  test_ops_custom.py
6_ascendc_custom_op/pytorch_invocation/pytorch_patch/: AddCustomKernelNpu.cpp  npu_native_functions.yaml
6_ascendc_custom_op/tensorflow_inference/LeakyRelu/: README.md  fusion_off.cfg  leakyrelu.json
6_ascendc_custom_op/tensorflow_inference/LeakyRelu/op_host/: leaky_relu.cpp  leaky_relu_tiling.h
6_ascendc_custom_op/tensorflow_inference/LeakyRelu/op_kernel/: kernel_leaky_relu.h  kernel_leaky_relu_tiling.h  leaky_relu.cpp
(+14 files in other folders)
